# gds_opt

./: CMakeLists.txt  README.md
bench/: run_bench.sh
docs/: imagenet_smallfile_benchmark.md
groute/: CMakeLists.txt  README.md  pyproject.toml
groute/cpp/include/groute/: backend.hpp  cufile_stub_backend.hpp  metadata.h  metadata.hpp  posix_backend.hpp  route_planner.hpp  runtime.hpp
groute/cpp/src/: cufile_stub_backend.cpp  metadata.cpp  posix_backend.cpp  route_planner.cpp  runtime.cpp
groute/examples/: runtime_demo.cpp
groute/python/groute/: __init__.py  dataset.py  planner.py
groute/tests/: test_metadata.cpp  test_route_planner.cpp
include/: cached_gds_runner.h  cached_gds_runner.hpp  cpu_path_runner.h  gds_cache.h  gds_cache.hpp  naive_gds_runner.h  naive_gds_runner.hpp  optimized_gds_runner.h  optimized_gds_runner.hpp
include/gds_common/: error.hpp  runtime.hpp  timing.hpp
scripts/: gen_test_file.sh  parse_trace.py  plot.py  run_all.sh  start_trace.sh  stop_trace.sh  summarize.py
src/: bench_main.cpp  cached_gds_runner.cpp  cpu_path_runner.cpp  gds_cache.cpp  imagenet_compare_main.cpp  microbench_main.cpp  naive_gds_runner.cpp  optimized_gds_runner.cpp
src/gds_common/: error.cpp  runtime.cpp  timing.cpp
